# AMRZurich

./: AMAZE_PV_PLUGIN.v2.01.tar  README.md  RunR730Visu.txt  jet3d.py
A-MAZE/: AMAZEReader.xml  CMakeLists.txt  TestAMAZEReader.cxx  TestJet3D.cxx  plugin.cmake  test  test.cxx  vtkAMRAmazeReader.cxx  vtkAMRAmazeReader.h  vtkAMRAmazeReaderInternal.cxx  vtkAMRAmazeReaderInternal.h
A-MAZE/src/: CMakeLists.txt
A-MAZE/src/Reader/: CMakeLists.txt  CSCSAMRReader_Server.xml  vtk.module  vtkAMAZEReader.h  vtkCSCSAMRReader.h
A-MAZE/v5.8/: CMakeLists.txt  README.md
A-MAZE/v5.8/src/: paraview.plugin
A-MAZE/v5.8/src/Reader/: TestJet3D.cxx  vtkAMAZEReader.cxx  vtkCSCSAMRReader.cxx
Chombo/: CMakeLists.txt  ChomboReader.xml  vtkAMRChomboReader.cxx  vtkAMRChomboReader.h  vtkAMRChomboReaderInternal.cxx  vtkAMRChomboReaderInternal.h  vtkChomboReader2.cxx  vtkChomboReader2.h
LesHouches/: README.txt
ParaViewPlugin/: CMakeLists.txt
ParaViewPlugin/src/: CMakeLists.txt
ParaViewPlugin/src/Reader/: AmazeReader_Server.xml  CMakeLists.txt  CSCSAMRReader_Server.xml  vtk.module  vtkAMAZEFileSeriesReader.cxx  vtkAMAZEFileSeriesReader.h  vtkAMAZEReader.cxx  vtkAMAZEReader.h  vtkAMRAmazeReader.cxx  vtkAMRAmazeReader.h  vtkAMRAmazeReaderInternal.cxx  vtkAMRAmazeReaderInternal.h  vtkCSCSAMRReader.cxx  vtkCSCSAMRReader.h
ParaViewPlugin/src/Testing/Cxx/: CMakeLists.txt  TestJet3D.cxx
ParaViewPlugin/src/Testing/Python/: pvTest.py
VisIt/: A-MazeUtilities.py  AMAZE.xml  AMAZECommonPluginInfo.C  AMAZEEnginePluginInfo.C  AMAZEMDServerPluginInfo.C  AMAZEPluginInfo.C  AMAZEPluginInfo.h  CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  avtAMAZEFileFormat.C  avtAMAZEFileFormat.h  avtAMAZEOptions.C  cmake_install.cmake  visit210.sh  vtkAMAZEReader.C  vtkAMAZEReader.h
VisIt4/: AMAZE.xml  AMAZECommonPluginInfo.C  AMAZEEnginePluginInfo.C  AMAZEMDServerPluginInfo.C  AMAZEPluginInfo.C  AMAZEPluginInfo.h  CMakeCache.txt  CMakeLists.txt  Makefile  avtAMAZEFileFormat.C  avtAMAZEFileFormat.h  avtAMAZEOptions.h  cmake_install.cmake
